--- a/style_calendar.css
+++ b/style_calendar.css
@@ -6,11 +6,12 @@ border-collapse: collapse;
 }
 
 table.month td, table.month th {
-width: 14%;
+width: 250px;
 vertical-align: top;
 }
 table.month td {
-border-width: 5px 1px 5px 1px;
+border-width: 1px 1px 1px 1px;
+height: 30px;
 }
 
 
@@ -55,5 +56,3 @@ background-color: rgb(235,235,255);
 table.month .calsrchome {
 background-color: rgb(255,235,165);
 }
-
-
